Initial Server Entity for Login & Register feature in AuthController

--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -122,3 +122,5 @@ $RECYCLE.BIN/
 
 # --- Other ---
 # If you use specific tools that generate temporary files not covered, add them here.
+*.DS_Store
+Thumbs.db
