--- a/Server/KBlog.Api/appsettings.json
+++ b/Server/KBlog.Api/appsettings.json
@@ -8,5 +8,10 @@
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
 		"DefaultConnection": "Server=ITCENTER; Database=KBlog; TrustServerCertificate=True; Integrated Security=True"
+	},
+	"JwtSettings": {
+		"Issuer": "KBlogAPI",
+		"Audience": "KBlogClient",
+		"DurationInMinutes":  60
 	}
 }
