--- a/Server/KBlog.Infrastructure/KBlog.Infrastructure.csproj
+++ b/Server/KBlog.Infrastructure/KBlog.Infrastructure.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\KBlog.Application\KBlog.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
